Well well well, here he comes