@@ -7,6 +7,7 @@ RUN apt-get update && apt-get -y install git build-essential
 RUN ./sbtx pack 
 ENV WEIGHTS="./Wizard-Vicuna-7B-Uncensored.ggmlv3.q5_0.bin"
 ENV LIBLLAMA="/app/llama.cpp/libllama.so"
+ENV JAVA_OPTS="--add-modules=jdk.incubator.foreign --enable-native-access=ALL-UNNAMED"
 RUN apt-get update && apt-get -y install git build-essential
 RUN git clone https://github.com/ggerganov/llama.cpp
 RUN cd llama.cpp && git checkout 49e7cb5 && make libllama.so && cd ..
